codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
assertion_line: 363
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd and approval policy while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd and approval policy while keeping model constant.

## Window 1
-- request 1 (turn; First Request (Baseline)) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[3]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <SKILLS_INSTRUCTIONS>
    [03] <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first turn
-- request 2 (turn; Second Request (Turn Overrides)) --
04:message/assistant:
    turn one complete
05:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
06:message/user:
    <ENVIRONMENT_CONTEXT>
07:message/user:
    second turn with context updates
